--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 /[Ll]ibrary/
+!/[Ll]ibrary/BuildSettings.asset
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
