--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,7 +14,8 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.10",
+    "com.unity.xr.arcore": "4.2.6",
+    "com.unity.xr.management": "4.2.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
