--- a/Assets/CyanPlatformIntegrations/software.contraband.unity.platformintegrations.asmdef
+++ b/Assets/CyanPlatformIntegrations/software.contraband.unity.platformintegrations.asmdef
@@ -5,7 +5,12 @@
         "GUID:ff6de30450f3748908ff580f6ec64d9a",
         "GUID:0fda7ebe61ab2164383d10e32efb9c6e",
         "GUID:9172e27a923a34eb8b02dc3ab88d3dcd",
-        "GUID:1ed07ff861e5f468287b0baef844706d"
+        "GUID:1ed07ff861e5f468287b0baef844706d",
+        "GUID:60bfecf5cb232594891bc622f40d6bed",
+        "GUID:7bb1ee73ebb9f114188944f67b1333d6",
+        "GUID:e25a61468ff30f44fad56a6b40062363",
+        "GUID:059c931883a8a274690376c0592ea9a0",
+        "GUID:08d1c582746949b40ba6a45cdb776bdf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
