--- a/Assets/Plugins/Android/gradleTemplate.properties
+++ b/Assets/Plugins/Android/gradleTemplate.properties
@@ -7,4 +7,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Android Resolver Properties End
 **ADDITIONAL_PROPERTIES**
-android.bundle.enableUncompressedNativeLibs=false
+# android.bundle.enableUncompressedNativeLibs=false
