--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Build Adnroid Project
+    name: Build Android Project
     runs-on: ubuntu-latest
     steps:
       # Checkout
